--- a/RSPGame/rsp.html
+++ b/RSPGame/rsp.html
@@ -16,9 +16,9 @@
             <div id="rspMainContainer" class="col-12 rsp-bg-container text-center">
                 <h1 class="rsp-heading mt-3">Rock Scissor Paper Game</h1>
                 <div>
-                    <img src="RSP/RPS.png" class="game-poster mt-4 mb-3" />
+                    <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036509/RPS_io5ia4.png" class="game-poster mt-4 mb-3" />
                 </div>
-                <h1 class="pvsc">Player V/S Computer</h1>
+                <h1 class="pvsc">Player __ V/S __ Computer</h1>
                 <div id="buttonContainer" class="mt-3">
                     <button onclick="onChooseRock()" id="rockButton" class="btn btn-primary mr-3">Rock</button>
                     <button onclick="onChoosePaper()" id="paperButton" class="btn btn-primary mr-3">Paper</button>
@@ -30,12 +30,21 @@
                 </div>
 
                 <div id="resultImgContainer" class=" d-flex flex-row justify-content-center mt-4">
-                    <img src="RSP/rock.png" id="rockImg" class="op-img" />
-                    <img src="RSP/paper.png" id="paperImg" class="op-img " />
-                    <img src="RSP/scissor.png" id="scissorImg" class="op-img" />
+                    <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036509/rock_lqqgym.jpg" id="rockImg" class="op-img" />
+                    <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036508/paper_vtgrpx.png" id="paperImg" class="op-img " />
+                    <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036508/scissor_u4bvbp.png" id="scissorImg" class="op-img" />
                 </div>
-                <p id="result" class="result mt-2">Let's Play !!!</p>
-                <p class="me">© Made by Subham Panda</p>
+                <div id="res2Container" class="d-none flex-row justify-content-center mt-4 ">
+                    <img src="" id="user" class="op-img mr-3" />
+                    <img src="" id="comp" class="op-img mr-3" />
+                </div>
+                <div class="d-none mt-3" id="spinner">
+                    <div class="d-flex flex-row justify-content-center">
+                        <div class="spinner-border" role="status"></div>
+                    </div>
+                </div>
+                <p id="result" class="result mt-2">Choose One !!!</p>
+                <p class="me fixed-bottom mb-0"> © Made by Subham Panda</p>
             </div>
         </div>
     </div>
