--- a/RSPGame/rsp.html
+++ b/RSPGame/rsp.html
@@ -34,7 +34,8 @@
                     <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036508/paper_vtgrpx.png" id="paperImg" class="op-img " />
                     <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036508/scissor_u4bvbp.png" id="scissorImg" class="op-img" />
                 </div>
-                <div id="res2Container" class="d-none flex-row justify-content-center mt-4 ">
+
+                <div id="res2Container" class="d-none flex-row justify-content-center mt-4">
                     <img src="" id="user" class="op-img mr-3" />
                     <img src="" id="comp" class="op-img mr-3" />
                 </div>
@@ -43,7 +44,8 @@
                         <div class="spinner-border" role="status"></div>
                     </div>
                 </div>
-                <p id="result" class="result mt-2">Choose One !!!</p>
+                <p id="result" class="result mt-3 mb-3">Choose One !!!</p>
+
                 <p class="me fixed-bottom mb-0"> © Made by Subham Panda</p>
             </div>
         </div>
