--- a/RSPGame/rsp.html
+++ b/RSPGame/rsp.html
@@ -18,7 +18,7 @@
                 <div>
                     <img src="https://res.cloudinary.com/df2kcpkgv/image/upload/v1654036509/RPS_io5ia4.png" class="game-poster mt-4 mb-3" />
                 </div>
-                <h1 class="pvsc">Player __ V/S __ Computer</h1>
+                <h1 class="pvsc">Player V/S Computer</h1>
                 <div id="buttonContainer" class="mt-3">
                     <button onclick="onChooseRock()" id="rockButton" class="btn btn-primary mr-3">Rock</button>
                     <button onclick="onChoosePaper()" id="paperButton" class="btn btn-primary mr-3">Paper</button>
@@ -37,7 +37,8 @@
 
                 <div id="res2Container" class="d-none flex-row justify-content-center mt-4">
                     <img src="" id="user" class="op-img mr-3" />
-                    <img src="" id="comp" class="op-img mr-3" />
+                    <span class="vs">V/S</span>
+                    <img src="" id="comp" class="op-img ml-3" />
                 </div>
                 <div class="d-none mt-3" id="spinner">
                     <div class="d-flex flex-row justify-content-center">
